<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/color_picsell_background"
    tools:context=".WithdrawActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/title_layout"
                />

            <LinearLayout
                    android:layout_marginTop="25dp"
                    android:background="@drawable/color_layout_withdraw"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/name"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/fd_ferdous_rahman_doyal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/number_id"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/_01744431962"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/joining_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/joining_date_id"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/_11_08_2021"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/account_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/active"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/referral_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/referral_ID"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text="@string/_01425873"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/usd_text"
                android:gravity="center"
                android:text="100 USD"
                android:fontFamily="sans-serif-black"
                android:textStyle="italic|bold"
                android:textColor="#FFC4E8"
                android:textSize="45sp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/statement_btn"
                    android:background="@drawable/usd_text"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:text="@string/statement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/withdraw_btn"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/withdraw_btn"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textAllCaps="false"
                    android:text="@string/withdraw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="#BFBFBF"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/color_text_withdraw"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:text="Sell your photography "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/your_account_type"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/account_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/diamond"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/your_daily_sell_limit"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/daily_sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/_20_image"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/today_date"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/to_date_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/_11_08_2021"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/today_total_sell"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/total_sell_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/_500"
                            android:textColor="@color/color_text_withdraw"
                            android:textSize="20sp"
                            android:textStyle="italic" />

                    </LinearLayout>
                    <View
                        android:layout_marginTop="20dp"
                        android:textColor="@color/color_text_withdraw"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="2dp"/>

                    <Button
                        android:id="@+id/picture_upload_btn"
                        android:backgroundTint="@color/gray"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:text="@string/picture_upload_to_sell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/all_picture_btn"
                        android:backgroundTint="@color/gray"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginBottom="50dp"
                        android:text="@string/all_sold_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>